# simple-task-manager

./: .gitignore  README.md  makefile  manage.py  pyproject.toml  setup.cfg
simple_task_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
simple_task_manager/main/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
simple_task_manager/templates/: archive.html  base.html  home.html  index.html  sign_in.html
